@@ -35,7 +35,6 @@ lib/npg_pipeline/function/illumina_basecall_stats.pm
 lib/npg_pipeline/function/illumina_qc_archiver.pm
 lib/npg_pipeline/function/log_files_archiver.pm
 lib/npg_pipeline/function/p4_stage1_analysis.pm
-lib/npg_pipeline/function/runfolder_scaffold.pm
 lib/npg_pipeline/function/seq_alignment.pm
 lib/npg_pipeline/function/seq_to_irods_archiver.pm
 lib/npg_pipeline/function/seqchksum_comparator.pm
@@ -53,6 +52,7 @@ lib/npg_pipeline/pluggable/registry.pm
 lib/npg_pipeline/roles/accessor.pm
 lib/npg_pipeline/roles/business/base.pm
 lib/npg_pipeline/roles/business/flag_options.pm
+lib/npg_pipeline/runfolder_scaffold.pm
 lib/npg_pipeline/validation/autoqc_files.pm
 lib/npg_pipeline/validation/common.pm
 lib/npg_pipeline/validation/sequence_files.pm
@@ -71,6 +71,7 @@ t/10-cache-barcodes.t
 t/10-pluggable.t
 t/10-pluggable-central.t
 t/10-pluggable-registry.t
+t/10-runfolder_scaffold.t
 t/10-script-job_env_to_threads.t
 t/10-validation-autoqc_files.t
 t/10-validation-sequence_files.t
@@ -87,7 +88,6 @@ t/20-function-illumina_basecall_stats.t
 t/20-function-illumina_qc_archiver.t
 t/20-function-log_files_archiver.t
 t/20-function-p4_stage1_analysis.t
-t/20-function-runfolder_scaffold.t
 t/20-function-seq_alignment.t
 t/20-function-seq_to_irods_archiver.t
 t/20-function-seqchksum_comparator.t
