@@ -5,7 +5,7 @@ use namespace::autoclean;
 use Readonly;
 
 use npg_pipeline::function::definition;
-use npg_pipeline::function::runfolder_scaffold;
+use npg_pipeline::runfolder_scaffold;
 
 extends qw{npg_pipeline::base};
 
@@ -26,8 +26,8 @@ sub create {
     $self->warn(q{Archival to iRODS is switched off.});
     $ref->{'excluded'} = 1;
   } else {
-    my $future_path = npg_pipeline::function::runfolder_scaffold
-                        ->path_in_outgoing($self->runfolder_path());
+    my $future_path = npg_pipeline::runfolder_scaffold
+                      ->path_in_outgoing($self->runfolder_path());
     $ref->{'job_name'} = join q{_}, q{publish_illumina_logs}, $self->id_run(), $self->timestamp();
     $ref->{'command'} = join q[ ], $SCRIPT_NAME, q{--runfolder_path}, $future_path,
                                                  q{--id_run}, $self->id_run();
