@@ -7,6 +7,7 @@ use Readonly;
 use npg_pipeline::function::definition;
 
 extends q{npg_pipeline::base};
+with q{npg_pipeline::runfolder_scaffold};
 
 our $VERSION = '0';
 
