@@ -4,9 +4,8 @@ use Moose;
 use MooseX::StrictConstructor;
 use namespace::autoclean;
 
-use npg_pipeline::function::runfolder_scaffold;
-
-extends qw{npg_pipeline::pluggable};
+extends 'npg_pipeline::pluggable';
+with    'npg_pipeline::runfolder_scaffold';
 
 our $VERSION = '0';
 
@@ -30,22 +29,32 @@ Pipeline runner for the analysis pipeline.
 
 Inherits from parent's method. Sets all paths needed during the lifetime
 of the analysis runfolder. Creates any of the paths that do not exist.
-Ater that calls the parent's method.
 
 =cut
 
 override 'prepare' => sub {
   my $self = shift;
 
-  my $output = npg_pipeline::function::runfolder_scaffold->create_top_level($self);
+  my $output = $self->create_top_level();
   my @errors = @{$output->{'errors'}};
-   if ( @errors ) {
+  if ( @errors ) {
     $self->logcroak(join qq[\n], @errors);
   } else {
     $self->info(join qq[\n], @{$output->{'msgs'}});
+    $self->info();
   }
 
   super(); # Corect order
+
+  $output = $self->create_analysis_level();
+  @errors = @{$output->{'errors'}};
+  if ( @errors ) {
+    $self->logcroak(join qq[\n], @errors);
+  } else {
+    my $m = join qq[\n], map {qq[\t\t] . $_} @{$output->{'dirs'}};
+    $self->info(qq[Ensured the following directories exist:\n$m]);
+    $self->info();
+  }
 
   return;
 };
