@@ -1,15 +1,10 @@
-package npg_pipeline::function::runfolder_scaffold;
+package npg_pipeline::runfolder_scaffold;
 
-use Moose;
-use namespace::autoclean;
-use File::Path qw(make_path);
+use Moose::Role;
+use File::Path qw/make_path/;
 use File::Spec;
 use Readonly;
 use Carp;
-
-use npg_pipeline::function::definition;
-
-extends q{npg_pipeline::base};
 
 our $VERSION = '0';
 
@@ -17,8 +12,9 @@ Readonly::Scalar my $OUTGOING_PATH_COMPONENT => q[/outgoing/];
 Readonly::Scalar my $ANALYSIS_PATH_COMPONENT => q[/analysis/];
 Readonly::Scalar my $LOG_DIR_NAME            => q[log];
 Readonly::Scalar my $TILEVIZ_DIR_NAME        => q[tileviz];
+Readonly::Scalar my $STATUS_FILES_DIR_NAME   => q[status];
 
-sub create {
+sub create_analysis_level {
   my $self = shift;
 
   my @dirs = (
@@ -42,73 +38,74 @@ sub create {
     }
   }
 
-  my @errors = __PACKAGE__->make_dir(@dirs);
-  if (@errors) {
-    $self->logcroak(join qq[\n], @errors);
-  } else {
-    $self->info(q[Created the following directories: ], join q[, ], @dirs);
-  }
-
-  my $d = npg_pipeline::function::definition->new(
-    created_by     => __PACKAGE__,
-    created_on     => $self->timestamp(),
-    identifier     => $self->id_run(),
-    immediate_mode => 1
-  );
-
-  return [$d];
+  my @errors = $self->make_dir(@dirs);
+  return {'dirs' => \@dirs, 'errors' => \@errors};
 }
 
 sub create_top_level {
-  my ($pkg, $obj) = @_;
+  my $self = shift;
 
   my @info = ();
   my @dirs = ();
   my $path;
 
-  if (!$obj->has_intensity_path()) {
-    $path = File::Spec->catdir($obj->runfolder_path(), q{Data}, q{Intensities});
+  ######
+  # The directory names for paths are hardcoded here. Primary definitions for
+  # them are located in a number of tracking roles. These definitions should
+  # be made available in tracking so the they can be used here.
+  #
+  if (!$self->has_intensity_path()) {
+    $path = File::Spec->catdir($self->runfolder_path(), q{Data}, q{Intensities});
     if (!-e $path) {
       push @info, qq{Intensities path $path not found};
-      $path = $obj->runfolder_path();
+      $path = $self->runfolder_path();
     }
-    $obj->_set_intensity_path($path);
+    $self->_set_intensity_path($path);
   }
-  push @info, 'Intensities path: ', $obj->intensity_path();
+  push @info, 'Intensities path: ', $self->intensity_path();
 
-  if (!$obj->has_basecall_path()) {
-    $path = File::Spec->catdir($obj->intensity_path() , q{BaseCalls});
+  if (!$self->has_basecall_path()) {
+    $path = File::Spec->catdir($self->intensity_path() , q{BaseCalls});
     if (!-e $path) {
       push @info, qq{BaseCalls path $path not found};
-      $path = $obj->runfolder_path();
+      $path = $self->runfolder_path();
     }
-    $obj->_set_basecall_path($path);
+    $self->_set_basecall_path($path);
   }
-  push @info, 'BaseCalls path: ' . $obj->basecall_path();
+  push @info, 'BaseCalls path: ' . $self->basecall_path();
 
-  if(!$obj->has_bam_basecall_path()) {
-    $path= File::Spec->catdir($obj->intensity_path(), q{BAM_basecalls_} . $obj->timestamp());
+  if(!$self->has_bam_basecall_path()) {
+    $path= File::Spec->catdir($self->intensity_path(), q{BAM_basecalls_} . $self->timestamp());
     push @dirs, $path;
-    $obj->set_bam_basecall_path($path);
+    $self->set_bam_basecall_path($path);
   }
-  push @info, 'BAM_basecall path: ' . $obj->bam_basecall_path();
+  push @info, 'BAM_basecall path: ' . $self->bam_basecall_path();
 
-  if (!$obj->has_recalibrated_path()) {
-    $obj->_set_recalibrated_path(File::Spec->catdir($obj->bam_basecall_path(), 'no_cal'));
+  if (!$self->has_recalibrated_path()) {
+    $self->_set_recalibrated_path(File::Spec->catdir($self->bam_basecall_path(), 'no_cal'));
   }
-  push @dirs, $obj->recalibrated_path();
-  push @info, 'no_cal path: ' . $obj->recalibrated_path();
+  push @dirs, $self->recalibrated_path();
+  push @info, 'no_cal path: ' . $self->recalibrated_path();
 
-  my @errors = __PACKAGE__->make_dir(@dirs);
+  my @errors = $self->make_dir(@dirs);
 
   return {'msgs' => \@info, 'errors' => \@errors};
 }
 
-sub make_log_dir4name {
-  my ($pkg, $analysis_path, $name) = @_;
-  my $dir = File::Spec->catdir(_log_path($analysis_path), $name);
-  my @errors = __PACKAGE__->make_dir($dir);
-  return ($dir, @errors);
+sub status_files_path {
+  my $self = shift;
+  my $apath = $self->analysis_path;
+  if (!$apath) {
+    croak 'Failed to retrieve analysis_path';
+  }
+  return File::Spec->catdir($apath, $STATUS_FILES_DIR_NAME);
+}
+
+sub make_log_dir4names {
+  my ($pkg, $analysis_path, @names) = @_;
+  my @dirs = map { File::Spec->catdir(_log_path($analysis_path), $_) } @names;
+  my @errors = __PACKAGE__->make_dir(@dirs);
+  return {'dirs' => \@dirs, 'errors' => \@errors};
 }
 
 sub make_dir {
@@ -164,7 +161,7 @@ sub _log_path {
   return File::Spec->catdir($analysis_path, $LOG_DIR_NAME);
 }
 
-__PACKAGE__->meta->make_immutable;
+no Moose::Role;
 
 1;
 
@@ -172,13 +169,9 @@ __END__
 
 =head1 NAME
 
-npg_pipeline::function::runfolder_scaffold
+npg_pipeline::runfolder_scaffold
 
 =head1 SYNOPSIS
-
-  my $afg = npg_pipeline::function::runfolder_scaffold->new(
-    run_folder => $sRunFolder,
-  );
 
 =head1 DESCRIPTION
 
@@ -186,7 +179,7 @@ Analysis run folder scaffolding.
 
 =head1 SUBROUTINES/METHODS
 
-=head2 create
+=head2 create_analysis_level
 
 Scaffolds the analysis directory.
 Returns an array with a single npg_pipeline::function::definition
@@ -197,6 +190,12 @@ object, which has immediate_mode attribute set to true.
 Sets all paths needed during the lifetime of the analysis runfolder.
 Creates any of the paths that do not exist.
 
+=head2 status_files_path
+
+A directory path to save status files to.
+
+=cut
+
 =head2 make_dir
 
 Creates directories listed in the argiment list, creates intermwdiate directories
@@ -205,7 +204,7 @@ is empty. Can be called both as an instance and a class method.
 
   my @errors = $scaffold->make_dir(qw/first second/);
 
-=head2 make_log_dir4name
+=head2 make_log_dir4names
 
 =head2 path_in_outgoing
 
