@@ -1,6 +1,9 @@
 LIST OF CHANGES
 ---------------
 
+ - removed create_archive_directory function, scaffolding the runfolder
+   is called in the beginning of the pipeline within the 'prepare'
+   method of the analysis pipeline
  - increased number of threads for p4 stage1 (newer bambi version required)
  - added LSF-independent evaluation for number of threads
  - removed redundant dependency on illumina2bam jars
